# lab_5

./: .gitignore  CMakeLists.txt  README.md
src/: atomic.cpp  main.cpp  parallel.cpp
